# test

./: .gitignore  .gitmodules
src/camera/: CMakeLists.txt  package.xml
src/camera/include/camera/: by_id_parking.hpp  by_id_parking_func.cpp  stopline.hpp  stopline_func.cpp
src/camera/src/: multi_cam.cpp  simple_cam.cpp  yolo_traffic.cpp
src/camera/src/창고/: by_id_parking.cpp  stopline.cpp  two_cam.cpp  yolo_final.cpp
src/fusion/: CMakeLists.txt
src/fusion/launch/: L.launch.py  R.launch.py  amz_fusion.launch.py  amz_fusion_beta.launch.py  amz_fusion_gamma.launch.py  amz_fusion_kang.launch (copy).py  amz_fusion_kang.launch.py  amz_fusion_sync.launch.py  compare_box_kang_left.launch.py  compare_box_kang_right.launch.py  compare_box_left.launch.py  compare_box_right.launch.py  deli_fusion.launch.py  deli_fusion_beta.launch.py  deli_fusion_image_sync.launch.py  deli_fusion_sync.launch.py  deli_image_flir.launch.py  deli_image_flir_beta.launch.py  deli_logi_fusion.launch.py  flir.launch.py  logi_launch.py
src/fusion/param/: A_L.yaml  A_R.yaml  A_bfs.yaml  A_param_amz_0930.yaml  B_L.yaml  B_R.yaml  B_bfs.yaml  B_param_amz.yaml  flir_param.yaml  left_0930.yaml  logi_param.yaml  lower_girin.yaml  right_0930.yaml  upper_girin.yaml
src/fusion/rviz/: two_bag.rviz
src/fusion/src/amz/: amz_fusion.cpp  black.cpp  compare_box_image_amz.cpp
src/fusion/src/deli/: compare_box_image_deliver.cpp  compare_box_image_deliver_beta.cpp  deli_fusion.cpp  deli_fusion_beta.cpp  deli_fusion_image_sync.cpp  deli_fusion_sync.cpp
src/fusion/src/etc/: image_publisher.cpp  projection_flir.cpp  projection_video.cpp
src/fusion/src/lidar_pre/: lidar_pre_amz.cpp  lidar_pre_amz_sync.cpp  lidar_pre_deli.cpp
src/lidar/: CMakeLists.txt  package.xml
src/lidar/include/lidar/: Example.hpp  LiDAR_big_static.hpp  LiDAR_dynamic.hpp  LiDAR_dynamic_tunnel.hpp  LiDAR_parallel_parking.hpp  LiDAR_small_static.hpp  LiDAR_small_static_tunnel.hpp  LiDAR_uturn.hpp  mission.hpp  utils.hpp
src/lidar/src/: Example.cpp  LiDAR_big_static.cpp  LiDAR_dynamic.cpp  LiDAR_dynamic_tunnel.cpp  LiDAR_parallel_parking.cpp  LiDAR_small_static.cpp  LiDAR_small_static_tunnel.cpp  LiDAR_uturn.cpp  main.cpp
src/lidar_lane/src/: lidar_lane.cpp
src/morai/: package.xml  setup.cfg  setup.py
src/morai/launch/: morai_launch.py
src/morai/morai/: gps_to_utm.py  morai_camera.py  morai_gps.py  morai_imu.py
